/*
 * Copyright 2018- The Pixie Authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package px.perf_tool;

option go_package = "sharedpb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "src/api/proto/uuidpb/uuid.proto";

// ExperimentRunID uniquely identifies a single run of an experiment.
// The experiment UUID uniquely identifies the experiment, however the experiment can be retried
// multiple times if it fails, so retry_idx is required to uniquely identify a single run.
message ExperimentRunID {
  px.uuidpb.UUID uuid = 1 [ (gogoproto.customname) = "UUID" ];
  int64 retry_idx = 2;
}
